--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,8 @@ main {
 html,
 body {
   min-height: 100%;
-  background-image: url(./assets/Background/hero2.jpg);
+  background-image: url(./assets/Background/hero3.jpg);
+  background-position: center;
 }
 
 body {
@@ -37,49 +38,9 @@ body {
 
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-  margin: 5px 0;
-  line-height: 1.25;
-}
-
-h1 {
-  font-size: 2.25rem;
-}
-
-h2 {
-  font-size: 2rem;
-}
-
-h3 {
-  font-size: 1.75rem;
-}
-
-h4 {
-  font-size: 1.5rem;
-}
-
-h5 {
-  font-size: 1.25rem;
-}
-
-h6 {
-  font-size: 1rem;
-}
-
-p {
-  font-size: 1.1rem;
-  margin-top: 0;
-}
 
 a {
-  color: var(--tertiary);
+  color: var(--error);
   text-decoration: none;
   font-weight: bold;
 }
@@ -112,36 +73,20 @@ button:hover {
   opacity: .8;
 }
 
-button[disabled] {
-  cursor: default;
-  opacity: .8;
-}
 
 img {
   max-width: 100%;
 }
 
-span[role="img"] {
-  cursor: default;
-}
-
-form {
-  width: 40%;
-}
-
 input {
   font-size: 1rem;
-  padding: 0.25rem;
   border: 1px solid var(--dark);
   outline: none;
   border-radius: 3px;
   transition: box-shadow 0.2s;
+  width:200px;
 }
 
-input:focus {
-  border: 1px solid var(--secondary);
-  box-shadow: 0 0 .25rem rgba(0, 0, 0, .5);
-}
 
 
 li {
@@ -150,25 +95,39 @@ li {
 nav a:hover {
   text-decoration: none;
 }
-
+textarea{
+  height: 100px;
+  width: 400px;;
+}
 nav  li {
   cursor: pointer;
 }
-
-textarea {
-	width: 600px;
-	height: 120px;
-	border: 3px solid #cccccc;
-	padding: 5px;
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
-.Hero{
+
+.heroMain{
+  width:100%;
+  height:500px;
+  background-color:rgba(22, 31, 37, 0.90)
+}
+.form-group{
+  width: 100%;
+  text-align: left;
+}
+.hero{
   padding: 100px;
 }
 .container {
-  width: 85%;
+  padding-top: 100px;
+  width: 35%;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
+ 
 }
 
 .flex-row {
@@ -250,7 +209,7 @@ button {
 	cursor: pointer;
 	font-size: 16px;
 	font-weight: 600;
-	margin-bottom: 30px;
+	padding-left: 30px;
 	padding: 10px 15px;	
 }
 
