--- a/src/index.css
+++ b/src/index.css
@@ -49,21 +49,10 @@ a:hover {
   text-decoration: underline;
 }
 
-header {
-  background: var(--darker);
-}
-
-header a {
-  color: var(--light);
-}
-
 button {
   font-size: 1rem;
   text-decoration: none;
   padding: 0.25rem 1rem;
-  border-radius: .5rem;
-  border: none;
-  outline: none;
   cursor: pointer;
   margin: 0 1px;
   background-color: var(--secondary);
@@ -83,8 +72,8 @@ input {
   border: 1px solid var(--dark);
   outline: none;
   border-radius: 3px;
-  transition: box-shadow 0.2s;
-  width:200px;
+
+  width:20em;
 }
 
 
@@ -96,8 +85,8 @@ nav a:hover {
   text-decoration: none;
 }
 textarea{
-  height: 100px;
-  width: 400px;;
+  height: 10em;
+  width: 20em;;
 }
 nav  li {
   cursor: pointer;
@@ -111,25 +100,32 @@ nav  li {
 
 .heroMain{
   width:100%;
-  height:500px;
-  background-color:rgba(22, 31, 37, 0.90)
+  height:auto;
+  background-color:rgba(22, 31, 37, 0.90);
+  text-align: center;
 }
 .form-group{
-  width: 100%;
   text-align: left;
 }
 .hero{
-  padding: 100px;
+  padding: 3em;
+  min-height: 90vh;
+}
+.hero p{
+  font-size: 1em;
 }
 .container {
-  padding-top: 100px;
+  padding-top: 3em;
   width: 35%;
-  max-width: 1200px;
+  max-width: 200em;
   margin-left: auto;
   margin-right: auto;
  
 }
-
+.download{
+  background-color: white;
+  color:black
+}
 .flex-row {
   display: flex;
   flex-wrap: wrap;
@@ -153,53 +149,29 @@ nav  li {
   margin-left: var(--spacing-two);
 }
 
-.my-1 {
-  margin-top: var(--spacing-one);
-  margin-bottom: var(--spacing-one);
-}
 
-.my-2 {
-  margin-top: var(--spacing-two);
-  margin-bottom: var(--spacing-two);
-}
 
-.my-5 {
-  margin-top: var(--spacing-five);
-  margin-bottom: var(--spacing-five);
-}
+.projects{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding-left: 2px;;
 
-.px-1 {
-  padding-right: var(--spacing-one);
-  padding-left: var(--spacing-one);
 }
-
-.px-2 {
-  padding-right: var(--spacing-two);
-  padding-left: var(--spacing-two);
+.project {
+  width: 500PX;
+  color:rgb(217, 217, 220);
+  height:200px;
+  margin-top: 20px;;
+  background-size: center;
+  background-position: center;
 }
-
-.py-1 {
-  padding-top: var(--spacing-one);
-  padding-bottom: var(--spacing-one);
-}
-
-.py-2 {
-  padding-top: var(--spacing-two);
-  padding-bottom: var(--spacing-two);
-}
-
-.card {
-  width: 25%;
+.project h1{
+  background-color: #5a7971;
+  font-size: 2rem;
+  margin-top: 0px;
   text-align: center;
 }
-
-.img-thumbnail {
-  width: auto;
-  height: 300px;
-  margin-bottom: 50px;
-  cursor: pointer;
-}
-
 
 button {
 	background: var(--primary);
@@ -222,7 +194,60 @@ a {
 	margin-right: -2px;
 	
 }
-
+.footer{
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height:auto;
+ background-color: #5a7971;
+  color: white;
+  text-align: center;
+}
+.socialLinks{
+  padding-bottom: 30px;;
+}
+.link{
+  margin-left: 20px;;
+}
 .navActive {
-  color: var(--secondary);
+  background-color:rgba(7, 45, 71, 0.9);
+  border-radius: 10px;;
+}
+.error{
+  color:red;
+}
+@media screen and (max-width: 575px){
+  .projects{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    padding-left: 2px;;
+  
+  }
+  .project {
+   color:rgb(217, 217, 220);
+    height:200px;
+    width:auto;
+    margin-top: 20px;;
+    background-size: center;
+    background-position: center;
+  }
+  .project h1{
+    background-color: #5a7971;
+    width: 100%;
+    font-size: 1.5rem;
+    margin-top: 0px;
+  }
+  .container {
+    padding-top: 3em;
+    width: auto;
+    max-width: 200em;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+   
+  }
+  
 }
